# synthetic_clif

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
synth_clif_10k/: adt.parquet  clinical_trial.parquet  code_status.parquet  crrt_therapy.parquet  ecmo_mcs.parquet  hospital_diagnosis.parquet  hospitalization.parquet  invasive_hemodynamics.parquet  key_icu_orders.parquet  medication_admin_intermittent.parquet  medication_orders.parquet  microbiology_culture.parquet  microbiology_nonculture.parquet  microbiology_susceptibility.parquet  patient.parquet  patient_diagnosis.parquet  patient_procedures.parquet  place_based_index.parquet  provider.parquet  therapy_details.parquet  transfusion.parquet
synthetic_clif/: __init__.py  __main__.py
synthetic_clif/config/: __init__.py  mcide.py  schema.py
synthetic_clif/generators/: __init__.py  adt.py  assessments.py  base.py  dataset.py  hospitalization.py  labs.py  medications.py  microbiology.py  other.py  patient.py  procedures.py  respiratory.py  vitals.py
synthetic_clif/generators/concept/: __init__.py  clinical_trial.py  ecmo_mcs.py  intake_output.py  invasive_hemodynamics.py  key_icu_orders.py  medication_orders.py  microbiology_nonculture.py  patient_diagnosis.py  (+4 more)
synthetic_clif/models/: __init__.py  patient_state.py
synthetic_clif/utils/: __init__.py  distributions.py  timestamps.py
tests/: __init__.py  conftest.py  test_assessments.py  test_dataset.py  test_hospitalization.py  test_labs.py  test_mcide.py  test_medications.py  test_microbiology.py  test_patient.py  test_respiratory.py  test_vitals.py
