[project]
name = "synthetic_clif"
version = "0.1.0"
description = "Generate synthetic CLIF (Common Longitudinal ICU data Format) datasets"
requires-python = ">= 3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "faker>=18.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
synthetic-clif = "synthetic_clif.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthetic_clif*"]

[tool.setuptools.package-data]
"synthetic_clif.config.mcide" = ["**/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
